--- a/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.html
+++ b/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.html
@@ -18,8 +18,8 @@
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
-                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data}}</th>
-                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data}}</th>
+                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
+                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
                                 <th class="th-top" *ngIf="addEval">
                                     <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
                                         style="width: 110px;">
@@ -124,8 +124,8 @@
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
-                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data}}</th>
-                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data}}</th>
+                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
+                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
                                 <th class="th-top" *ngIf="addEval">
                                     <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
                                         style="width: 110px;">
@@ -231,8 +231,8 @@
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
-                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data}}</th>
-                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data}}</th>
+                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
+                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
                                 <th class="th-top" *ngIf="addEval">
                                     <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
                                         style="width: 110px;">
@@ -337,8 +337,8 @@
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
-                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data}}</th>
-                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data}}</th>
+                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
+                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
                                 <th class="th-top" *ngIf="addEval">
                                     <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
                                         style="width: 110px;">
@@ -439,8 +439,8 @@
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
-                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data}}</th>
-                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data}}</th>
+                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
+                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
                                 <th class="th-top" *ngIf="addEval">
                                     <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
                                         style="width: 110px;">
@@ -608,8 +608,8 @@
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
-                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data}}</th>
-                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data}}</th>
+                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
+                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
                                 <th class="th-top" *ngIf="addEval">
                                     <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
                                         style="width: 110px;">
@@ -714,8 +714,8 @@
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
-                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data}}</th>
-                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data}}</th>
+                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
+                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
                                 <th class="th-top" *ngIf="addEval">
                                     <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
                                         style="width: 110px;">
@@ -820,8 +820,8 @@
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
-                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data}}</th>
-                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data}}</th>
+                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
+                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
                                 <th class="th-top" *ngIf="addEval">
                                     <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
                                         style="width: 110px;">
