--- a/src/app/avaliation/flexibilidade/goniometro/goniometro.component.html
+++ b/src/app/avaliation/flexibilidade/goniometro/goniometro.component.html
@@ -17,8 +17,8 @@
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
-                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data}}</th>
-                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data}}</th>
+                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
+                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
                                 <th class="th-top" *ngIf="addEval">
                                     <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
                                         style="width: 110px;">
@@ -204,8 +204,8 @@
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
-                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data}}</th>
-                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data}}</th>
+                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
+                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
                                 <th class="th-top" *ngIf="addEval">
                                     <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
                                         style="width: 110px;">
@@ -361,8 +361,8 @@
                         <thead>
                             <tr>
                                 <th>&nbsp;</th>
-                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data}}</th>
-                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data}}</th>
+                                <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
+                                <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
                                 <th class="th-top" *ngIf="addEval">
                                     <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
                                         style="width: 110px;">
