--- a/src/app/avaliation/componente-morfologica/pdc/pdc.component.html
+++ b/src/app/avaliation/componente-morfologica/pdc/pdc.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div class="headers">
-        <h2 i18n>Perimetros e Diâmetros Corporais</h2>
+    <div class="header">
+        <h1 i18n>Perimetros e Diâmetros Corporais</h1>
     </div>
 
     <div class="section">
