--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -36,7 +36,7 @@
                 </mat-card>
                 <mat-card>
                     <mat-card-header [routerLink]="['/rdc/', studentId]">
-                        <mat-card-subtitle>Risco de desnvolvimento de cardiopatia</mat-card-subtitle>
+                        <mat-card-subtitle>Risco de desenvolvimento de cardiopatia</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
