--- a/src/app/avaliation/risco/rdc/rdc.component.html
+++ b/src/app/avaliation/risco/rdc/rdc.component.html
@@ -102,18 +102,18 @@
                 </mat-card-header>
                 <mat-card-content>
                     <mat-list>
-                        <mat-list-item *ngIf="sex == 'F'">
+                        <mat-list-item>
                             <mat-form-field>
-                                <mat-label i18n>Mulheres</mat-label>
+                                <mat-label i18n>percentagem</mat-label>
                                 <input matInput #gc="ngModel" name="gc" [(ngModel)]="data.gc">
                             </mat-form-field>
                         </mat-list-item>
-                        <mat-list-item *ngIf="sex == 'M'">
+  <!--                       <mat-list-item *ngIf="sex == 'M'">
                             <mat-form-field>
                                 <mat-label i18n>Homens</mat-label>
                                 <input matInput #gc="ngModel" name="gc" [(ngModel)]="data.gc">
                             </mat-form-field>
-                        </mat-list-item>
+                        </mat-list-item> -->
                     </mat-list>
                 </mat-card-content>
             </mat-card>
@@ -146,13 +146,7 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Frequência Semanal</mat-label>
-                                <mat-select #afs="ngModel" name="afs" [(ngModel)]="data.afs">
-                                    <mat-option value="0">4</mat-option>
-                                    <mat-option value="1">3</mat-option>
-                                    <mat-option value="2">2</mat-option>
-                                    <mat-option value="3">1</mat-option>
-                                    <mat-option value="4">0</mat-option>
-                                </mat-select>
+                                <input matInput #afs="ngModel" name="afs" [(ngModel)]="data.afs" readonly>
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
@@ -204,6 +198,12 @@
                     </mat-list>
                 </mat-card-content>
             </mat-card>
+            <div class="result">
+                <span i18n *ngIf="risco <= 1">Baixo</span>
+                <span i18n *ngIf="risco == 2">Moderado</span>
+                <span i18n *ngIf="risco == 3">Alto</span>
+                <span i18n *ngIf="risco > 3">Muito Alto</span>
+            </div>
             <div class="action">
                 <button mat-fab type="button" color="default" (click)="goBack()">
                     <mat-icon>close</mat-icon>
