--- a/src/app/avaliation/componente-postural/componente-postural.component.html
+++ b/src/app/avaliation/componente-postural/componente-postural.component.html
@@ -562,51 +562,67 @@
             </mat-tab>
             <!--   FOTOS -->
             <mat-tab i18n label="Fotos">
-                <div class="action">
-                    <button type="button" *ngIf="!addForm" [disabled]="pointer<=0" mat-mini-fab color="default"
-                        (click)="pointer=pointer-1">
-                        <mat-icon class="mat-14">chevron_left</mat-icon>
-                    </button>
-                    <button type="button" *ngIf="!addForm" [disabled]="pointer == maxPointer-1" mat-mini-fab
-                        color="default" (click)="pointer=pointer+1">
-                        <mat-icon class="mat-14">chevron_right</mat-icon>
-                    </button>
-                </div>
+
                 <table>
                     <thead>
                         <tr>
-                            <th class="th-top" *ngIf="pointer>=0">{{oldData[pointer].data | date:'dd-LL-yyyy'}}</th>
+                            <th class="th-top" *ngIf="pointer>=0">
+                                <button type="button" *ngIf="!addForm" [disabled]="pointer<=0" mat-mini-fab color="default"
+                                (click)="pointer=pointer-1">
+                                <mat-icon class="mat-14">chevron_left</mat-icon>
+                            </button>
+                                {{oldData[pointer].data | date:'dd-LL-yyyy'}}
+                                <button type="button" *ngIf="!addForm" [disabled]="pointer == maxPointer-1" mat-mini-fab
+                                color="default" (click)="pointer=pointer+1">
+                                <mat-icon class="mat-14">chevron_right</mat-icon>
+                            </button>
+                            </th>
                             <th class="th-top" *ngIf="addForm">
                                 <input name="data" #data="ngModel" [(ngModel)]="newData.data" type="date"
                                     style="width: 110px;">
                             </th>
                         </tr>
+
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td colspan="2">
-                                <div class="photos" *ngIf="oldData[pointer]">
+                </table>
+
+                                <div class="photos">
                                     <div class="photo">
-                                        <img [src]="oldData[pointer].fotoa" alt="Vista Anterior">
+                                        <div *ngIf="oldData[pointer] && oldData[pointer].fotoa">
+                                            <img [src]="oldData[pointer].fotoa" alt="Vista Anterior">
+                                        </div>
+                                        <div *ngIf="!oldData[pointer] || !oldData[pointer].fotoa">
+                                            <img src="./assets/img/front_view.jpg" alt="Vista Anterior">
+                                        </div>                                        
                                         <button *ngIf="pointer+1 == maxPointer" mat-mini-fab (click)="openTakePhoto('a')">
                                             <mat-icon>camera_alt</mat-icon>
                                         </button>
                                     </div>
                                     <div class="photo">
-                                        <img [src]="oldData[pointer].fotol" alt="Vista Lateral">
+                                        <div *ngIf="oldData[pointer] && oldData[pointer].fotol">
+                                            <img [src]="oldData[pointer].fotol" alt="Vista Lateral">
+                                        </div>
+                                        <div *ngIf="!oldData[pointer] || !oldData[pointer].fotol">
+                                            <img src="./assets/img/side_view.jpg" alt="Vista Lateral">
+                                        </div>  
                                         <button *ngIf="pointer+1 == maxPointer" mat-mini-fab (click)="openTakePhoto('l')">
                                             <mat-icon>camera_alt</mat-icon>
                                         </button>
                                     </div>
                                     <div class="photo">
-                                        <img [src]="oldData[pointer].fotop" alt="Vista Posterior">
+                                        <div *ngIf="oldData[pointer] && oldData[pointer].fotop">
+                                            <img [src]="oldData[pointer].fotop" alt="Vista Posterior">
+                                        </div>
+                                        <div *ngIf="!oldData[pointer] || !oldData[pointer].fotop">
+                                            <img src="./assets/img/back_view.jpg" alt="Vista Posterior">
+                                        </div>  
                                         <button *ngIf="pointer+1 == maxPointer" mat-mini-fab (click)="openTakePhoto('p')">
                                             <mat-icon>camera_alt</mat-icon>
                                         </button>
 
                                     </div>
                                 </div>
-                                <div *ngIf="view" class="photoArea" style="text-align:center">
+                                <div *ngIf="view && pointer+1 == maxPointer" class="photoArea" style="text-align:center">
                                     <h4>{{viewTitle}}</h4>
                                     <div *ngIf="!webcamImage">
                                         <webcam [width]="200" [trigger]="triggerObservable"
@@ -637,10 +653,6 @@
                                         </button>
                                     </div>
                                 </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
 
             </mat-tab>
         </mat-tab-group>
