--- a/src/app/avaliation/componente-postural/componente-postural.component.scss
+++ b/src/app/avaliation/componente-postural/componente-postural.component.scss
@@ -5,8 +5,9 @@
     height: 75vh;
     bottom: 8%;
     overflow: auto;
-    display: flex;
+    display: flex-start;
     flex-direction: column;
+    align-items: stretch;
 
     table {
       width: 98%;
@@ -63,8 +64,7 @@
 
 
   .photos{
-    margin-top: 20px;
-    height: 25%;
+    margin: 20px 0;
     width: 100%;
     display: flex;
     justify-content: space-around;
@@ -80,7 +80,7 @@
   }
 
   .photoArea{
-    margin-top: 100px;
-    height: 75%;
+/*     margin-top: 100px;
+    height: 75%; */
 
   }
