--- a/src/app/avaliation/dobras/slaugther/slaugther.component.html
+++ b/src/app/avaliation/dobras/slaugther/slaugther.component.html
@@ -8,8 +8,10 @@
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
-                        <th class="th-top" (click)="setEvaluation(evaluation[pointer-1], pointer-1)" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
-                        <th class="th-top" (click)="setEvaluation(evaluation[pointer], pointer)" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
+                        <th class="th-top" (click)="setEvaluation(evaluation[pointer-1], pointer-1)" *ngIf="pointer>=1">
+                            {{evaluation[pointer-1].data | date:'dd-LL-yyyy'}}</th>
+                        <th class="th-top" (click)="setEvaluation(evaluation[pointer], pointer)" *ngIf="pointer>=0">
+                            {{evaluation[pointer].data | date:'dd-LL-yyyy'}}</th>
                         <th class="th-top" *ngIf="addEval">
                             <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
                                 style="width: 110px;">
@@ -79,22 +81,17 @@
         <hr />
         <h5 style="text-align: center; color: blue;">{{selectedEvaluation.data | date:'dd-LL-yyyy'}}</h5>
         <div class="graphics">
-            <ngx-charts-pie-chart 
-                [view]="view" 
-                [scheme]="colorScheme" 
-                [results]="single" 
-                [gradient]="gradient"
-                [legend]="showLegend" 
-                [legendPosition]="legendPosition" 
-                [labels]="showLabels" 
-                [doughnut]="isDoughnut"
-                (select)="onSelect($event)" 
-                (activate)="onActivate($event)" 
-                (deactivate)="onDeactivate($event)">
+            <ngx-charts-pie-chart i18n [view]="view" [scheme]="colorScheme" [results]="single" [gradient]="gradient"
+                [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels" [doughnut]="isDoughnut"
+                (select)="onSelect($event)" (activate)="onActivate($event)" (deactivate)="onDeactivate($event)">
             </ngx-charts-pie-chart>
         </div>
-
-
+        <div class="graphics">
+            <ngx-charts-pie-chart i18n [view]="view" [scheme]="colorScheme" [results]="single2" [gradient]="gradient"
+                [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels" [doughnut]="isDoughnut"
+                (select)="onSelect($event)" (activate)="onActivate($event)" (deactivate)="onDeactivate($event)">
+            </ngx-charts-pie-chart>
+        </div>
     </div>
 
     <div class="footer">
